--- a/functions/.vscode/settings.json
+++ b/functions/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-	"typescript.tsdk": "node_modules/typescript/lib"
+	"editor.fontLigatures": true,
+	"editor.fontSize": 14,
+	"editor.fontFamily": "JetBrainsMono Nerd Font",
+	"editor.fontWeight": "300",
+	"editor.tabSize": 2,
+	"editor.insertSpaces": true
 }
