--- a/functions/package.json
+++ b/functions/package.json
@@ -12,6 +12,7 @@
   },
   "main": "dist/index.js",
   "dependencies": {
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
