chore: add eslint instead of biome

--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,7 @@
     "deploy": "firebase deploy --only functions"
   },
   "engines": {
-    "node": "20"
+    "node": "22"
   },
   "main": "dist/index.js",
   "dependencies": {
@@ -28,9 +28,18 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@eslint/js": "^9.18.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.10.2",
-    "typescript": "^5.7.2"
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.21.0"
   },
   "private": true
 }
