--- a/functions/.vscode/settings.json
+++ b/functions/.vscode/settings.json
@@ -6,5 +6,12 @@
 	"editor.fontWeight": "300",
 	"editor.tabSize": 2,
 	"editor.insertSpaces": true,
-	"editor.minimap.enabled": false
+	"editor.minimap.enabled": false,
+	"eslint.enable": true,
+	"eslint.format.enable": true,
+	"[typescript]": {
+		"editor.codeActionsOnSave": {
+			"source.fixAll.eslint": "explicit",
+		}
+	}
 }
