--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,38 @@
 {
 	"version": 2,
 	"buildCommand": "npm run build",
-	"devCommand": "npm run start:server",
+	"devCommand": "npm run start",
+	"builds": [
+		{
+			"src": "package.json",
+			"use": "vercel-sapper"
+		},
+		{
+			"src": "dist/index.js",
+			"use": "@vercel/node"
+		}
+	],
+	"routes": [
+		{
+			"src": "/(.*)",
+			"dest": "dist/index.js",
+			"methods": [
+				"GET",
+				"POST",
+				"PUT",
+				"DELETE",
+				"PATCH",
+				"OPTIONS"
+			],
+			"headers": {
+				"Access-Control-Allow-Origin": "*"
+			}
+		}
+	],
 	"rewrites": [
 		{
 			"source": "/(.*)",
-			"destination": "/functions/src/index.ts"
+			"destination": "/api"
 		}
 	]
 }
