chore: update vercel.json

--- a/functions/package.json
+++ b/functions/package.json
@@ -6,6 +6,7 @@
     "stopall": "lsof -t -i:5000 -i:5002 -i:5009 -i:8089 | xargs kill -9",
     "start:emulators": "firebase emulators:start --only functions,tasks,hosting",
     "start:server": "tsx watch src/index.ts",
+		"start": "node dist/index.js",
     "deploy": "firebase deploy --only functions",
     "lint": "eslint \"**/*.ts\" --fix"
   },
