--- a/functions/vercel.json
+++ b/functions/vercel.json
@@ -1,13 +1,27 @@
 {
 	"version": 2,
-	"builds": [{
-		"src": "dist/index.js",
-		"use": "@vercel/node"
-	}],
-	"rewrites": [
+	"buildCommand": "npm run build",
+	"builds": [
 		{
-			"source": "/(.*)",
-			"destination": "/src"
+			"src": "dist/index.js",
+			"use": "@vercel/node"
+		}
+	],
+	"routes": [
+		{
+			"src": "/(.*)",
+			"dest": "dist/index.js",
+			"methods": [
+				"GET",
+				"POST",
+				"PUT",
+				"DELETE",
+				"PATCH",
+				"OPTIONS"
+			],
+			"headers": {
+				"Access-Control-Allow-Origin": "*"
+			}
 		}
 	]
 }
