feat: remove pino and add winston as logger package

--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,7 @@
     "stopall": "lsof -t -i:5000 -i:5002 -i:5009 -i:8089 | xargs kill -9",
     "start:emulators": "firebase emulators:start --only functions,tasks,hosting",
     "start:server": "tsx watch src/index.ts",
-		"start": "node dist/index.js",
+    "start": "node dist/index.js",
     "deploy": "firebase deploy --only functions",
     "lint": "eslint \"**/*.ts\" --fix"
   },
@@ -27,8 +27,8 @@
     "firebase-functions": "^6.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
-    "pino-http": "^10.4.0",
     "tsup": "^8.3.5",
+    "winston": "^3.17.0",
     "zod": "^3.24.1",
     "zod-validation-error": "^3.4.0"
   },
