--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,7 @@
     "start:emulators": "firebase emulators:start --only functions,tasks,hosting",
     "start:server": "tsx watch src/index.ts",
     "start": "node dist/index.js",
-    "deploy": "yarn build && vercel --prod",
+    "deploy": "sh deploy.sh",
     "lint": "eslint \"**/*.ts\" --fix"
   },
   "engines": {
@@ -27,7 +27,9 @@
     "firebase-functions": "^6.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
+    "qrcode-terminal": "^0.12.0",
     "tsup": "^8.3.5",
+    "whatsapp-web.js": "^1.26.0",
     "zod": "^3.24.1",
     "zod-validation-error": "^3.4.0"
   },
@@ -36,6 +38,7 @@
     "@eslint/js": "^9.18.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.10.2",
+    "@types/qrcode-terminal": "^0.12.2",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
     "eslint": "^9.18.0",
