--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "commonjs",
+		"moduleDetection": "force",
+    "module": "Preserve",
     "moduleResolution": "node",
     "inlineSources": true,
     "skipLibCheck": true,
@@ -12,6 +13,8 @@
     "sourceMap": true,
     "esModuleInterop": true,
     "strictNullChecks": true,
+		"isolatedModules": true,
+		"allowJs": true,
     "noUnusedLocals": true,
 		"strict": true,
     "baseUrl": "./",
@@ -25,7 +28,6 @@
 			"./src/@types"
 		],
   },
-  "compileOnSave": true,
   "include": [
     "src"
 	]
