--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,12 +6,5 @@
 	"editor.fontWeight": "300",
 	"editor.tabSize": 2,
 	"editor.insertSpaces": true,
-	"editor.minimap.enabled": false,
-	"eslint.enable": true,
-	"eslint.format.enable": true,
-	"[typescript]": {
-		"editor.codeActionsOnSave": {
-			"source.fixAll.eslint": "explicit",
-		}
-	}
+	"editor.minimap.enabled": false
 }
