--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
     "@eslint/js": "^9.18.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.10.2",
@@ -47,5 +46,13 @@
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.21.0"
   },
-  "private": true
+  "private": true,
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "bcrypt",
+      "esbuild",
+      "protobufjs",
+      "puppeteer"
+    ]
+  }
 }
