--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase-functions": "^6.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
+    "multer": "^1.4.5-lts.1",
     "qrcode-terminal": "^0.12.0",
     "tsup": "^8.3.5",
     "whatsapp-web.js": "^1.23.0",
@@ -32,6 +33,9 @@
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/express": "4.17.21",
+    "@types/express-serve-static-core": "4.17.37",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.2",
     "@types/qrcode-terminal": "^0.12.2",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
