--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "main": "dist/index.js",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@date-fns/tz": "^1.2.0",
     "@hokify/agenda": "^6.3.0",
     "axios": "^1.7.9",
